# website_summary

./: .gitignore  Makefile  README.md  check_db.py  docker-compose.yml  fly.toml  identifier.sqlite  package-lock.json
.clerk/.tmp/: keyless.json
backend/: .dockerignore  Dockerfile  encore.app  fly.toml  main.py  pyproject.toml  reproduce_issue.py  requirements.txt  sqlc.yaml
backend/data/: summarizer.db
backend/migrations/: 1_create_summaries.up.sql  2_users.up.sql
backend/queries/: summaries.sql
backend/summarizer/: api.py  auth.py  crawler.py  openrouter.py  scraper.py  service.py
data/: summarizer.db
frontend/: .dockerignore  Dockerfile  fly.toml  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.ts
frontend/src/api/: client.js
frontend/src/assets/: main.css
frontend/src/components/: UrlSummarizer.vue
frontend/src/lib/: api.ts  config.ts
