[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "beautifulsoup4>=4.14.3",
    "clerk-backend-api>=5.0.6",
    "fastapi>=0.135.3",
    "fpdf2>=2.8.7",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "typing-extensions>=4.15.0",
    "uvicorn[standard]>=0.42.0",
]
